# tritet

./: Cargo.toml
src/: constants.rs  tetgen.rs  triangle.rs
