[package]
name = "tritet"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Triangle and tetrahedron mesh generators"
homepage = "https://github.com/cpmech/tritet"
repository = "https://github.com/cpmech/tritet"
documentation = "https://docs.rs/tritet"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["2D", "3D", "mesh", "geometry"]

[features]
default = ["plotpy"]

[dependencies]
plotpy = { version = "0.3", optional = true }
once_cell = "1.12.0"

[build-dependencies]
cc = "1.0"

